[User] test case 추가
